--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@babel/core": "^7.13.16",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^8.1.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
+    "url-loader": "^4.1.1",
     "webpack": "^5.36.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
